--- a/perfil.html
+++ b/perfil.html
@@ -19,10 +19,13 @@
             <a href="dashboard.html" class="nav-link"><i class="fas fa-tachometer-alt"></i> <span>Dashboard</span></a>
           </li>
           <li class="nav-item">
-            <a href="#" class="nav-link"><i class="fas fa-calendar-plus"></i> <span>Agendar Salas</span></a>
+            <a href="reservas.html" class="nav-link"><i class="fas fa-calendar-plus"></i> <span>Agendar Salas</span></a>
           </li>
           <li class="nav-item">
-            <a href="#" class="nav-link"><i class="fas fa-box"></i> <span>Insumos</span></a>
+            <a href="salas.html" class="nav-link"><i class="fas fa-calendar-plus"></i> <span>Cadastrar salas</span></a>
+          </li>
+          <li class="nav-item">
+            <a href="insumos.html" class="nav-link"><i class="fas fa-box"></i> <span>Insumos</span></a>
           </li>
           <li class="nav-item">
             <a href="usuarios.html" class="nav-link"><i class="fas fa-users"></i> <span>Usuários</span></a>
