--- a/usuarios.html
+++ b/usuarios.html
@@ -21,10 +21,13 @@
             <a href="dashboard.html" class="nav-link"><i class="fas fa-tachometer-alt"></i> <span>Dashboard</span></a>
           </li>
           <li class="nav-item">
-            <a href="#" class="nav-link"><i class="fas fa-calendar-plus"></i> <span>Agendar Salas</span></a>
+            <a href="reservas.html" class="nav-link"><i class="fas fa-calendar-plus"></i> <span>Agendar Salas</span></a>
           </li>
           <li class="nav-item">
-            <a href="#" class="nav-link"><i class="fas fa-box"></i> <span>Insumos</span></a>
+            <a href="salas.html" class="nav-link"><i class="fas fa-calendar-plus"></i> <span>Cadastrar salas</span></a>
+          </li>
+          <li class="nav-item">
+            <a href="insumos.html" class="nav-link"><i class="fas fa-box"></i> <span>Insumos</span></a>
           </li>
           <li class="nav-item">
             <a href="usuarios.html" class="nav-link active"><i class="fas fa-users"></i> <span>Usuários</span></a>
@@ -44,7 +47,7 @@
           <h1 class="page-title">Registered Users</h1>
           <div class="live-clock">
             <i class="fas fa-clock"></i>
-            <span id="current-time">November 10, 2025 02:03 PM -03</span>
+            <span id="current-time">November 10, 2025 02:03 PM</span>
             <span class="country-flag">BR</span>
           </div>
         </div>
@@ -75,31 +78,25 @@
         Gerencie e visualize todos os usuários cadastrados no sistema.
       </p>
 
-      <!-- Estatísticas -->
+      <!-- Estatísticas DINÂMICAS -->
       <div class="stats-grid">
-        <div class="stat-card">
+        <div class="stat-card" id="total-users-card">
           <div class="stat-icon stat-total"><i class="fas fa-users"></i></div>
-          <div class="stat-value">10</div>
+          <div class="stat-value" id="total-value">0</div>
           <div class="stat-label">Total de Usuários</div>
-          <div class="stat-subtitle">9 ativos</div>
+          <div class="stat-subtitle" id="total-active">0 ativos</div>
         </div>
-        <div class="stat-card">
-          <div class="stat-icon stat-student"><i class="fas fa-user-graduate"></i></div>
-          <div class="stat-value">5</div>
-          <div class="stat-label">Alunos</div>
-          <div class="stat-subtitle">50% do total</div>
-        </div>
-        <div class="stat-card">
+        <div class="stat-card" id="teacher-card">
           <div class="stat-icon stat-teacher"><i class="fas fa-chalkboard-teacher"></i></div>
-          <div class="stat-value">4</div>
+          <div class="stat-value" id="teacher-value">0</div>
           <div class="stat-label">Professores</div>
-          <div class="stat-subtitle">40% do total</div>
+          <div class="stat-subtitle" id="teacher-percent">0% do total</div>
         </div>
-        <div class="stat-card">
+        <div class="stat-card" id="admin-card">
           <div class="stat-icon stat-admin"><i class="fas fa-user-shield"></i></div>
-          <div class="stat-value">1</div>
-          <div class="stat-label">Administrador</div>
-          <div class="stat-subtitle">10% do total</div>
+          <div class="stat-value" id="admin-value">0</div>
+          <div class="stat-label">Administradores</div>
+          <div class="stat-subtitle" id="admin-percent">0% do total</div>
         </div>
       </div>
 
@@ -248,6 +245,29 @@
       <div class="modal-footer">
         <button class="btn-modal cancel" onclick="closeModal('confirm-user-modal')">Cancelar</button>
         <button class="btn-modal" id="confirm-save-btn">Sim, Cadastrar</button>
+      </div>
+    </div>
+  </div>
+
+  <!-- MODAL 5: EXCLUIR USUÁRIO -->
+  <div class="modal-overlay" id="delete-user-modal">
+    <div class="modal" style="max-width: 500px;">
+      <div class="modal-header">
+        <button class="btn-close" onclick="closeModal('delete-user-modal')">×</button>
+        <div class="modal-icon warning"><i class="fas fa-exclamation-triangle"></i></div>
+        <div class="modal-title">Excluir Usuário</div>
+      </div>
+      <div class="modal-body">
+        <p>Tem certeza que deseja <strong>excluir permanentemente</strong> este usuário?</p>
+        <div id="delete-preview"
+          style="margin: 1rem 0; padding: 1rem; background: #fef2f2; border-radius: 8px; font-size: 0.95rem; color: #991b1b;">
+          <!-- Preenchido via JS -->
+        </div>
+        <p><strong>Esta ação não pode ser desfeita.</strong></p>
+      </div>
+      <div class="modal-footer">
+        <button class="btn-modal cancel" onclick="closeModal('delete-user-modal')">Cancelar</button>
+        <button class="btn-modal" id="confirm-delete-btn" style="background: var(--danger);">Excluir</button>
       </div>
     </div>
   </div>
