telas de adm prontas

--- a/dashboard.html
+++ b/dashboard.html
@@ -2,10 +2,17 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=1200, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   <title>GestSala - Dashboard</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"/>
   <link rel="stylesheet" href="./src/style/dashboard.css">
+
+  <!-- BLOQUEIO MOBILE -->
+  <script>
+    if (/Mobi|Android|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent) || window.innerWidth < 1024) {
+      document.documentElement.innerHTML = `...`; // (mesmo código de erro mobile)
+    }
+  </script>
 </head>
 <body>
 
@@ -15,24 +22,12 @@
       <div class="logo">Gest<span>Sala</span></div>
       <nav>
         <ul class="nav-menu">
-          <li class="nav-item">
-            <a href="dashboard.html" class="nav-link active"><i class="fas fa-tachometer-alt"></i> <span>Dashboard</span></a>
-          </li>
-          <li class="nav-item">
-            <a href="reservas.html" class="nav-link"><i class="fas fa-calendar-plus"></i> <span>Agendar Salas</span></a>
-          </li>
-          <li class="nav-item">
-            <a href="salas.html" class="nav-link"><i class="fas fa-door-open"></i> <span>Cadastrar salas</span></a>
-          </li>
-          <li class="nav-item">
-            <a href="insumos.html" class="nav-link"><i class="fas fa-box"></i> <span>Insumos</span></a>
-          </li>
-          <li class="nav-item">
-            <a href="usuarios.html" class="nav-link"><i class="fas fa-users"></i> <span>Usuários</span></a>
-          </li>
-          <li class="nav-item">
-            <a href="#" class="nav-link"><i class="fas fa-chart-bar"></i> <span>Relatório</span></a>
-          </li>
+          <li class="nav-item"><a href="dashboard.html" class="nav-link active"><i class="fas fa-tachometer-alt"></i> <span>Dashboard</span></a></li>
+          <li class="nav-item"><a href="reservas.html" class="nav-link"><i class="fas fa-calendar-plus"></i> <span>Agendar Salas</span></a></li>
+          <li class="nav-item"><a href="salas.html" class="nav-link"><i class="fas fa-door-open"></i> <span>Cadastrar salas</span></a></li>
+          <li class="nav-item"><a href="insumos.html" class="nav-link"><i class="fas fa-box"></i> <span>Insumos</span></a></li>
+          <li class="nav-item"><a href="usuarios.html" class="nav-link"><i class="fas fa-users"></i> <span>Usuários</span></a></li>
+          <li class="nav-item"><a href="#" class="nav-link"><i class="fas fa-chart-bar"></i> <span>Relatório</span></a></li>
         </ul>
       </nav>
     </aside>
@@ -106,40 +101,27 @@
 
       <!-- Calendário + Gráfico -->
       <div class="content-row">
-        <!-- Calendário Dinâmico -->
         <div class="card">
           <h3 class="card-title"><i class="fas fa-calendar-alt"></i> <span id="mes-ano">Carregando...</span></h3>
           <div class="calendar">
             <div class="calendar-header">
               <span>Dom</span><span>Seg</span><span>Ter</span><span>Qua</span><span>Qui</span><span>Sex</span><span>Sáb</span>
             </div>
-            <div class="calendar-grid" id="calendar-grid">
-              <!-- Preenchido via JS -->
-            </div>
+            <div class="calendar-grid" id="calendar-grid"></div>
           </div>
         </div>
 
-        <!-- Gráfico de Insumos (mantido estático por enquanto) -->
         <div class="card">
           <h3 class="card-title"><i class="fas fa-chart-bar"></i> Insumos mês</h3>
           <div class="chart-container">
             <div class="bar-chart">
-              <div class="bar" style="height: 60%;">
-                <div class="bar-value">80</div>
-                <div class="bar-label">Gases</div>
-              </div>
-              <div class="bar" style="height: 90%;">
-                <div class="bar-value">180</div>
-                <div class="bar-label">Águas</div>
-              </div>
-              <div class="bar" style="height: 40%;">
-                <div class="bar-value">40</div>
-                <div class="bar-label">Aventais</div>
-              </div>
+              <div class="bar" style="height: 60%;"><div class="bar-value">80</div><div class="bar-label">Gases</div></div>
+              <div class="bar" style="height: 90%;"><div class="bar-value">180</div><div class="bar-label">Águas</div></div>
+              <div class="bar" style="height: 40%;"><div class="bar-value">40</div><div class="bar-label">Aventais</div></div>
             </div>
           </div>
           <div style="text-align: right; font-size: 0.8rem; color: var(--text-light); margin-top: 1rem;">
-            <span style="color: #a78bfa;">■ Novembro</span>
+            <span style="color: #a78bfa;">Novembro</span>
           </div>
         </div>
       </div>
@@ -147,30 +129,33 @@
       <!-- Salas Disponíveis Hoje -->
       <div class="card">
         <h3 class="card-title"><i class="fas fa-clinic-medical"></i> Salas Disponíveis Hoje</h3>
-        <div class="rooms-grid" id="rooms-grid">
-          <!-- Preenchido via JS -->
-        </div>
+        <div class="rooms-grid" id="rooms-grid"></div>
       </div>
     </main>
   </div>
 
-  <!-- MODAL -->
-  <div class="modal-overlay" id="modal">
+  <!-- MODAL LOGOUT -->
+  <div class="modal-overlay" id="logout-modal">
     <div class="modal">
       <div class="modal-header">
-        <button class="btn-close" onclick="closeModal()">×</button>
-        <div class="modal-icon" id="modal-icon">
-          <i class="fas fa-check"></i>
-        </div>
-        <div class="modal-title" id="modal-title">Atenção</div>
+        <button class="btn-close" onclick="closeModal('logout-modal')">×</button>
+        <div class="modal-icon warning"><i class="fas fa-sign-out-alt"></i></div>
+        <div class="modal-title">Sair do Sistema</div>
       </div>
-      <div class="modal-body" id="modal-message">
-        Deseja realmente sair do sistema?
-      </div>
+      <div class="modal-body">Tem certeza que deseja encerrar a sessão?</div>
       <div class="modal-footer">
-        <button class="btn-modal cancel" onclick="closeModal()">Cancelar</button>
+        <button class="btn-modal cancel" onclick="closeModal('logout-modal')">Cancelar</button>
         <button class="btn-modal" onclick="confirmLogout()">Sair</button>
       </div>
+    </div>
+  </div>
+
+  <!-- MODAL SUCESSO -->
+  <div class="modal-overlay" id="success-modal">
+    <div class="modal">
+      <div class="modal-icon success"><i class="fas fa-check"></i></div>
+      <div class="modal-title">Sucesso!</div>
+      <div class="modal-body" id="success-message"></div>
     </div>
   </div>
 
