--- a/insumos.html
+++ b/insumos.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=1200, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   <title>GestSala - Insumos</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
   <link rel="stylesheet" href="./src/style/insumos.css">
@@ -11,16 +11,14 @@
 <body>
 
   <div class="container">
-    <!-- Sidebar (igual ao usuarios.html) -->
+    <!-- Sidebar -->
     <aside class="sidebar">
       <div class="logo">Gest<span>Sala</span></div>
       <nav>
         <ul class="nav-menu">
           <li class="nav-item"><a href="dashboard.html" class="nav-link"><i class="fas fa-tachometer-alt"></i> <span>Dashboard</span></a></li>
           <li class="nav-item"><a href="reservas.html" class="nav-link"><i class="fas fa-calendar-plus"></i> <span>Agendar Salas</span></a></li>
-          <li class="nav-item">
-            <a href="salas.html" class="nav-link"><i class="fas fa-calendar-plus"></i> <span>Cadastrar salas</span></a>
-          </li>
+          <li class="nav-item"><a href="salas.html" class="nav-link"><i class="fas fa-door-open"></i> <span>Cadastrar salas</span></a></li>
           <li class="nav-item"><a href="insumos.html" class="nav-link active"><i class="fas fa-box"></i> <span>Insumos</span></a></li>
           <li class="nav-item"><a href="usuarios.html" class="nav-link"><i class="fas fa-users"></i> <span>Usuários</span></a></li>
           <li class="nav-item"><a href="#" class="nav-link"><i class="fas fa-chart-bar"></i> <span>Relatório</span></a></li>
@@ -30,16 +28,17 @@
 
     <!-- Main Content -->
     <main class="main-content">
-      <!-- Header -->
+      <!-- HEADER -->
       <header class="header">
         <div class="header-left">
-          <h1 class="page-title">Controle de Insumos</h1>
+          <h1 class="page-title">Gestão de Insumos</h1>
           <div class="live-clock">
             <i class="fas fa-clock"></i>
-            <span id="current-time">--</span>
+            <span id="current-time">Carregando...</span>
             <span class="country-flag">BR</span>
           </div>
         </div>
+
         <div class="user-info" id="user-dropdown">
           <div class="user-avatar" id="header-avatar">
             <img src="" alt="" id="header-img" style="display:none;">
@@ -50,9 +49,14 @@
             <div class="user-role">Cep Belém</div>
           </div>
           <i class="fas fa-chevron-down dropdown-arrow"></i>
+
           <div class="dropdown-menu" id="dropdown-menu">
-            <a href="perfil.html" class="dropdown-item"><i class="fas fa-user-edit"></i> Editar Perfil</a>
-            <a href="#" class="dropdown-item logout-item" onclick="openLogoutModal()"><i class="fas fa-sign-out-alt"></i> Sair</a>
+            <a href="perfil.html" class="dropdown-item">
+              <i class="fas fa-user-edit"></i> Editar Perfil
+            </a>
+            <a href="#" class="dropdown-item logout-item" onclick="openLogoutModal()">
+              <i class="fas fa-sign-out-alt"></i> Sair do Sistema
+            </a>
           </div>
         </div>
       </header>
@@ -67,13 +71,13 @@
           <div class="stat-icon stat-total"><i class="fas fa-boxes-stacked"></i></div>
           <div class="stat-value" id="total-insumos">0</div>
           <div class="stat-label">Total de Insumos</div>
-          <div class="stat-subtitle" id="total-estoque">0 itens em estoque</div>
+          <div class="stat-subtitle" id="total-estoque">0 itens</div>
         </div>
         <div class="stat-card">
           <div class="stat-icon stat-warning"><i class="fas fa-exclamation-triangle"></i></div>
           <div class="stat-value" id="baixa-estoque">0</div>
           <div class="stat-label">Baixo Estoque</div>
-          <div class="stat-subtitle">< 20% do total</div>
+          <div class="stat-subtitle">&lt; 20%</div>
         </div>
         <div class="stat-card">
           <div class="stat-icon stat-danger"><i class="fas fa-calendar-times"></i></div>
@@ -112,30 +116,38 @@
               <th></th>
             </tr>
           </thead>
-          <tbody id="insumos-tbody">
-            <!-- Preenchido via JS -->
-          </tbody>
+          <tbody id="insumos-tbody"></tbody>
         </table>
       </div>
     </main>
   </div>
 
-  <!-- MODAIS -->
-  <!-- Logout -->
-  <div class="modal-overlay" id="logout-modal">...</div>
-
-  <!-- Sucesso -->
-  <div class="modal-overlay" id="success-modal">
+  <!-- MODAL LOGOUT (COMPLETO) -->
+  <div class="modal-overlay" id="logout-modal">
     <div class="modal">
       <div class="modal-header">
-        <div class="modal-icon success"><i class="fas fa-check"></i></div>
-        <div class="modal-title">Sucesso!</div>
+        <button class="btn-close" onclick="closeModal('logout-modal')">×</button>
+        <div class="modal-icon warning"><i class="fas fa-sign-out-alt"></i></div>
+        <div class="modal-title">Sair do Sistema</div>
       </div>
+      <div class="modal-body">Tem certeza que deseja encerrar a sessão?</div>
+      <div class="modal-footer">
+        <button class="btn-modal cancel" onclick="closeModal('logout-modal')">Cancelar</button>
+        <button class="btn-modal" onclick="confirmLogout()">Sair</button>
+      </div>
+    </div>
+  </div>
+
+  <!-- MODAL SUCESSO -->
+  <div class="modal-overlay" id="success-modal">
+    <div class="modal">
+      <div class="modal-icon success"><i class="fas fa-check"></i></div>
+      <div class="modal-title">Sucesso!</div>
       <div class="modal-body" id="success-message"></div>
     </div>
   </div>
 
-  <!-- Adicionar Insumo -->
+  <!-- MODAL ADICIONAR -->
   <div class="modal-overlay" id="add-insumo-modal">
     <div class="modal" style="max-width: 600px;">
       <div class="modal-header">
@@ -151,7 +163,7 @@
           </div>
           <div class="form-group">
             <label>Especificação Técnica</label>
-            <textarea name="especificacao_tec_insumo" rows="3" placeholder="Ex: 500 folhas, 75g/m², branco"></textarea>
+            <textarea name="especificacao_tec_insumo" rows="3" placeholder="Ex: 500 folhas, 75g/m²"></textarea>
           </div>
           <div class="form-row">
             <div class="form-group" style="flex:1;">
@@ -161,7 +173,7 @@
                 <option value="UN">UN (Unidade)</option>
                 <option value="KG">KG (Quilograma)</option>
                 <option value="L">L (Litro)</option>
-                <option value="M">  ">M (Metro)</option>
+                <option value="M">M (Metro)</option>
               </select>
             </div>
             <div class="form-group" style="flex:1;">
@@ -182,6 +194,7 @@
     </div>
   </div>
 
+  <!-- JavaScript -->
   <script src="./src/scripts/insumos.js"></script>
 </body>
 </html>
